- Changed from DynamoDB to DynamoDB.DocumentClient - Added zero date environment variable - Temporarily remove status checking

--- a/fetch-motions/serverless.yml
+++ b/fetch-motions/serverless.yml
@@ -45,6 +45,7 @@ provider:
   environment:
     MOTION_REQUEST_LOG_TABLE: "motion-request-log"
     MOTION_TABLE: "motions"
+    DATE_ZERO: "1990-01-01"
 
 functions:
   fetchMotions:
