Adds documentation, serverless offline and deploy to AWS (now in eu-west-1, Ireland). Fixes #1.!

--- a/fetch-motions/package.json
+++ b/fetch-motions/package.json
@@ -8,5 +8,8 @@
     "aws-sdk": "^2.282.1",
     "moment": "^2.22.2",
     "request": "^2.87.0"
+  },
+  "devDependencies": {
+    "serverless-offline": "^3.25.10"
   }
 }
