Makes fetch-motions accessible via http POST

--- a/fetch-motions/serverless.yml
+++ b/fetch-motions/serverless.yml
@@ -62,3 +62,6 @@ functions:
       - http:
           path: fetch-motions
           method: get
+      - http:
+          path: fetch-motions
+          method: post
