--- a/fetch-motions/package.json
+++ b/fetch-motions/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aws-sdk": "^2.282.1",
     "moment": "^2.22.2",
+    "object-sizeof": "^1.2.0",
     "request": "^2.87.0"
   },
   "devDependencies": {
