--- a/fetch-motions/serverless.yml
+++ b/fetch-motions/serverless.yml
@@ -50,6 +50,7 @@ provider:
     MOTION_REQUEST_LOG_TABLE: "motion-request-log"
     MOTION_TABLE: "motions"
     DATE_ZERO: "1990-01-01"
+    DB_ITEM_MAX_SIZE: 300000 # Dynamodb max item size 400 kB
 
 functions:
   fetchMotions:
