moves docker setup to a docker-compose file

--- a/fetch-motions/.gitignore
+++ b/fetch-motions/.gitignore
@@ -4,3 +4,9 @@ jspm_packages
 
 # Serverless directories
 .serverless
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
