--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -66,3 +66,9 @@ functions:
       - http:
           path: fetch-motions
           method: post
+  getMotionsByParty:
+    handler: apiHandler.getMotionsByParty
+    events:
+      - http:
+          path: motions/byparty
+          method: get
