--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -54,7 +54,7 @@ provider:
 
 functions:
   fetchMotions:
-    handler: handler.fetchMotions
+    handler: scheduledJobsHandler.fetchMotions
     events:
       # Every Sunday at 00:00, see https://docs.aws.amazon.com/AmazonCloudWatch/latest/events/ScheduledEvents.html#CronExpressions
       - schedule:
