--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "foundation-sites": "^6.5.0-rc.2",
+    "jquery": "^3.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-foundation": "^0.9.6",
     "react-scripts-ts": "2.17.0"
   },
   "scripts": {
@@ -18,6 +21,7 @@
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/react-foundation": "^0.9.3",
     "typescript": "^3.0.3"
   }
 }
