--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -12,7 +12,8 @@
     "aws-sdk": "^2.282.1",
     "moment": "^2.22.2",
     "object-sizeof": "^1.2.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "cryptiles": "^4.1.2"
   },
   "devDependencies": {
     "serverless": "^1.30.3",
