--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "foundation-sites": "^6.5.0-rc.2",
     "jquery": "^3.3.1",
+    "portable-fetch": "^3.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-foundation": "^0.9.6",
