Implements api to list pending motions

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -76,6 +76,12 @@ functions:
       - http:
           path: refresh-pending-motions
           method: get
+  getPendingMotions:
+    handler: apiHandler.getPendingMotions
+    events:
+      - http:
+          path: motions/pending
+          method: get
   getMotionsByParty:
     handler: apiHandler.getMotionsByParty
     events:
