--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,8 @@
 version: '3'
 
 services:
-  dynamodb:
-    # Note that there is an official image from Amazon, but I cannot get it to accept startup arguments.
-    image: "dwmkerr/dynamodb"
-    container_name: wdip_dynamodb
-    volumes: 
-      - dynamodb:/data
-    ports: 
-      - 8000:8000
-    command: "-sharedDb -dbPath /data"  
-  dynamodb-admin:
-    image: "boogak/dynamodb-admin"
-    container_name: wdip_dynamodbadmin
-    ports: 
-      - 8001:8001
-    environment: 
-      DYNAMO_ENDPOINT: "http://dynamodb:8000"
-  elastic-search:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.4.0
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
     container_name: wdip_elasticsearch
     depends_on: 
       - dynamodb
@@ -29,17 +13,16 @@ services:
     environment: 
       discovery.type: single-node
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.4.1
+    image: docker.elastic.co/kibana/kibana:6.4.2
     container_name: wdip_kibana
     depends_on:
-      - elastic-search
+      - elasticsearch
     # volumes:
       # - ./kibana.yml:/usr/share/kibana/config/kibana.yml
     ports: 
       - 5601:5601
     environment: 
-      ELASTICSEARCH_URL: "http://elastic-search:9200"
+      ELASTICSEARCH_URL: "http://elasticsearch:9200"
 
 volumes: 
-  dynamodb:
   elasticsearch:
