--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -15,7 +15,8 @@
     "elasticsearch": "^15.1.1",
     "moment": "^2.22.2",
     "object-sizeof": "^1.2.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "serverless": "^1.30.3",
