--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,16 @@
     "configurations": [
         {
             "type": "node",
+            "request": "attach",
+            "name": "Attach to WDIP-BE",
+            "port": 9229,
+            "address": "localhost",
+            "localRoot": "${workspaceFolder}/wdip-be",
+            "remoteRoot": "/app",
+            "protocol": "inspector"
+        },
+        {
+            "type": "node",
             "request": "launch",
             "name": "Debug fetch-motions",
             "program": "${workspaceRoot}/fetch-motions/node_modules/.bin/sls",
