--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,12 @@ services:
     ports: 
       - 3001:3001
       - 9229:9229
-    environment: 
-      - SLS_DEBUG=*
+    # environment: 
+    #   - SLS_DEBUG=* # Enable for verbose logging from serverless
     volumes: 
       - ./wdip-be:/app
     working_dir: /app
-    command: node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --host 0.0.0.0 --port 3001
+    command: npm run debug
   wdip-fe:
     image: node:10
     container_name: wdip-fe
@@ -46,8 +46,6 @@ services:
       - ./wdip-fe:/app
     working_dir: /app
     command: npm start
-
-
 
 volumes: 
   elasticsearch:
