--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -9,8 +9,9 @@
     "url": "https://github.com/hejare/aws-motioner-data.git"
   },
   "scripts": {
-    "build": "npm run build-ts",
+    "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
+    "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --location ./dist --host 0.0.0.0 --port 3001"
   },
   "dependencies": {
@@ -22,11 +23,12 @@
     "moment": "^2.22.2",
     "object-sizeof": "^1.2.0",
     "request": "^2.87.0",
-    "typescript": "^3.1.3",
     "winston": "^3.1.0"
   },
   "devDependencies": {
     "serverless": "^1.30.3",
-    "serverless-offline": "^3.25.10"
+    "serverless-offline": "^3.25.10",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   }
 }
