updates build script to use local typescript transpiler

--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "npm run build-ts && npm run tslint",
-    "build-ts": "tsc",
+    "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --location ./dist --host 0.0.0.0 --port 3001"
   },
