--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -12,7 +12,8 @@
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
-    "debug": "npm run build && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --location ./dist --host 0.0.0.0 --port 3001"
+    "debug": "./node_modules/.bin/tsc-watch --compiler typescript/bin/tsc --onSuccess 'npm run debug-lint-start'",
+    "debug-lint-start": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --location ./dist --host 0.0.0.0 --port 3001"
   },
   "dependencies": {
     "@types/elasticsearch": "^5.0.26",
@@ -26,8 +27,10 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "nodemon": "^1.18.4",
     "serverless": "^1.30.3",
     "serverless-offline": "^3.25.10",
+    "tsc-watch": "^1.0.30",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   }
