--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "portable-fetch": "^3.0.0",
     "react": "^16.4.2",
+    "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.4.2",
     "react-foundation": "^0.9.6",
     "react-scripts-ts": "2.17.0"
@@ -14,15 +15,18 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "testOriginal": "react-scripts-ts test --env=jsdom",
+    "test": "./node_modules/.bin/jest --watch",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^23.3.9",
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-foundation": "^0.9.3",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.0.3"
   }
 }
