--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -9,6 +9,7 @@
         "portable-fetch": "^3.0.0",
         "react": "^16.6.0",
         "react-d3-cloud": "^0.7.0",
+        "react-date-picker": "^7.0.0",
         "react-dom": "^16.6.0",
         "react-foundation": "^0.9.6",
         "react-scripts-ts": "2.17.0",
