Added galtan-positions, party colors, tooltip info and normalized bubble sizes.

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -104,3 +104,9 @@ functions:
       - http:
           path: charts/wordcloud
           method: get
+  getAllParties:
+    handler: apiHandler.getAllParties
+    events:
+      - http:
+          path: partydata/allparties
+          method: get
