--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -4,10 +4,14 @@
     "private": true,
     "dependencies": {
         "@types/recharts": "^1.1.0",
+        "chart.js": "^2.7.3",
+        "chartjs-plugin-annotation": "^0.5.7",
+        "chartjs-plugin-datalabels": "^0.4.0",
         "foundation-sites": "^6.5.0-rc.4",
         "jquery": "^3.3.1",
         "portable-fetch": "^3.0.0",
         "react": "^16.6.0",
+        "react-chartjs-2": "^2.7.4",
         "react-d3-cloud": "^0.7.0",
         "react-date-picker": "^7.0.0",
         "react-dom": "^16.6.0",
@@ -23,13 +27,14 @@
         "eject": "react-scripts-ts eject"
     },
     "devDependencies": {
+        "@types/chart.js": "^2.7.40",
         "@types/jest": "^23.3.9",
-        "jest": "^23.6.0",
-        "ts-jest": "^23.10.4",
         "@types/node": "^10.12.0",
         "@types/react": "^16.4.18",
         "@types/react-dom": "^16.0.9",
         "@types/react-foundation": "^0.9.3",
+        "jest": "^23.6.0",
+        "ts-jest": "^23.10.4",
         "typescript": "^3.1.3"
     }
 }
