--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,18 @@
     "configurations": [
         {
             "type": "node",
+            "request": "launch",
+            "name": "Launch T",
+            "program": "${workspaceFolder}/wdip-be/src/scheduledJobs/t.js"
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 9229
+        },
+        {
+            "type": "node",
             "request": "attach",
             "name": "Attach to WDIP-BE in Docker",
             "port": 9229,
