--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -19,6 +19,7 @@
     "@types/elasticsearch": "^5.0.26",
     "@types/node": "^10.12.0",
     "aws-sdk": "^2.282.1",
+    "axios": "^0.18.0",
     "cryptiles": "^4.1.2",
     "elasticsearch": "^15.1.1",
     "moment": "^2.22.2",
