--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -13,24 +13,30 @@
     "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "debug": "./node_modules/.bin/tsc-watch --compiler typescript/bin/tsc --onSuccess 'npm run debug-lint-start'",
-    "debug-lint-start": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline --location ./dist --host 0.0.0.0 --port 3001"
+    "debug-lint-start": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --location ./dist --host 0.0.0.0 --port 3001"
   },
   "dependencies": {
     "@types/elasticsearch": "^5.0.26",
     "@types/node": "^10.12.0",
     "aws-sdk": "^2.282.1",
     "axios": "^0.18.0",
+    "axios-debug": "0.0.4",
     "cryptiles": "^4.1.2",
     "elasticsearch": "^15.1.1",
+    "fast-safe-stringify": "^2.0.6",
     "moment": "^2.22.2",
     "object-sizeof": "^1.2.0",
+    "query-string": "^6.2.0",
     "request": "^2.87.0",
+    "ts-enum-util": "^3.1.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.7",
-    "serverless": "^1.30.3",
-    "serverless-offline": "^3.25.10",
+    "serverless": "^1.34.1",
+    "serverless-offline": "^3.25.6",
+    "serverless-offline-sqs": "^1.6.0",
+    "ts-node": "^7.0.1",
     "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
