--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     #   - SLS_DEBUG=* # Enable for verbose logging from serverless
     volumes: 
       - ./wdip-be:/app
+      - ./config/.aws:/root/.aws
     working_dir: /app
     command: npm run debug
   wdip-fe:
