makes sqs runnable in docker

--- a/config/sqs/elasticmq.conf
+++ b/config/sqs/elasticmq.conf
@@ -2,12 +2,12 @@ include classpath("application.conf")
 
 // What is the outside visible address of this ElasticMQ node
 // Used to create the queue URL (may be different from bind address!)
-node-address {
-    protocol = http
-    host = localhost
-    port = 9324
-    context-path = ""
-}
+//node-address {
+//    protocol = http
+//    host = sqs
+//    port = 9324
+//    context-path = ""
+//}
 
 rest-sqs {
     enabled = true
@@ -19,7 +19,7 @@ rest-sqs {
 
 // Should the node-address be generated from the bind port/hostname
 // Set this to true e.g. when assigning port automatically by using port 0.
-generate-node-address = false
+generate-node-address = true
 
 queues {
     wdip-import {
