--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -110,7 +110,7 @@ functions:
                 fromDate: false
                 toDate: false
   adminSqsEvent:
-    handler: dist/apiHandler.adminSqsEvent
+    handler: apiHandler.adminSqsEvent
     events:
       - sqs:
           arn: arn:aws:sqs:eu-west-1:843375259671:wdip-import
@@ -123,3 +123,5 @@ custom:
     accessKeyId: root
     secretAccessKey: root
     skipCacheInvalidation: false
+  serverless-offline:
+    location: ./dist
