--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -46,6 +46,7 @@
     "nodemon": "^1.18.7",
     "serverless": "^1.34.1",
     "serverless-offline": "^3.25.6",
+    "serverless-offline-scheduler": "^0.3.5",
     "serverless-offline-sqs": "^1.6.0",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
