reworks document status based on proposal statuses

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
             "request": "launch",
             "program": "${workspaceFolder}/wdip-be/node_modules/jest/bin/jest",
             "args": [
-                "--runInBand"
+                "--runInBand",
+                "--coverage",
+                "false"
             ],
             "cwd": "${workspaceFolder}/wdip-be",
             "console": "integratedTerminal",
