--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/query-string": "^6.1.1",
     "husky": "^1.2.1",
     "jest": "^23.6.0",
     "jest-extended": "^0.11.0",
