provides import functionality for DocumentType.PROPOSITION

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -61,6 +61,7 @@ functions:
           requests:
             parameters:
               querystrings:
+                documentType: false
                 fromDate: false
                 toDate: false
   adminStartUpdateImport:
