removes config flags for document type, use query parameters instead

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -75,6 +75,7 @@ functions:
             parameters:
               querystrings:
                 fromDate: false
+                documentType: false
   adminHandleImportQueueEvent:
     handler: importHandler.handleImportQueueEvent
     events:
