supports local and test environment setups

--- a/config/sqs/elasticmq.conf
+++ b/config/sqs/elasticmq.conf
@@ -22,7 +22,7 @@ rest-sqs {
 generate-node-address = false
 
 queues {
-    wdip-import {
+    wdip-import-local {
         defaultVisibilityTimeout = 30 seconds
         delay = 0 seconds
         receiveMessageWait = 0 seconds
