--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -1,7 +1,7 @@
 service: wdip-be
 
-app: motioner
-tenant: markushont
+app: wdip-be
+tenant: hejare
 
 plugins:
   - serverless-offline-sqs
@@ -11,11 +11,20 @@ plugins:
 provider:
   name: aws
   runtime: nodejs8.10
-  timeout: 300
   profile: wdip-test
-  stage: dev
   region: eu-west-1
-  environment: ${file(./environment.yml)}
+  environment: ${file(./environment_${opt:stage, "local"}.yml)}
+  enableScheduled: false
+
+iamRoleStatements:
+  - Effect: Allow
+    Action:
+      - es:ESHttpPost
+      - es:ESHttpPut
+      - es:ESHttpDelete
+      - es:ESHttpGet
+    Resource:
+      - arn:aws:es:${self:provider.region}:843375259671:*
 
 functions:
   getPendingMotions:
@@ -69,10 +78,12 @@ functions:
     events:
       - schedule:
           rate: rate(1 day)
+          enabled: ${self:provider.enableScheduled}
           input:
             documentType: mot
       - schedule:
           rate: rate(1 day)
+          enabled: ${self:provider.enableScheduled}
           input:
             documentType: prop
       - http:
@@ -87,12 +98,14 @@ functions:
     handler: importHandler.handleImportQueueEvent
     events:
       - sqs:
-          arn: arn:aws:sqs:eu-west-1:843375259671:wdip-import
+          arn: arn:aws:sqs:eu-west-1:843375259671:wdip-import-${opt:stage, "local"}
           batchSize: 1
   adminLogQueueStatus:
     handler: importHandler.logQueueStatus
     events:
-      - schedule: rate(1 minute)
+      - schedule:
+          rate: rate(1 minute)
+          enabled: ${self:provider.enableScheduled}
 
 custom:
   serverless-offline-sqs:
