--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -12,8 +12,7 @@
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
-    "debug": "./node_modules/.bin/tsc-watch --compiler typescript/bin/tsc --onSuccess 'npm run debug-lint-start'",
-    "debug-lint-start": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --location ./dist --host 0.0.0.0 --port 3001 --stage local",
+    "debug": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --host 0.0.0.0 --port 3001 --stage local",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -45,13 +44,13 @@
     "jest": "^23.6.0",
     "jest-extended": "^0.11.0",
     "nodemon": "^1.18.7",
-    "serverless": "^1.34.1",
-    "serverless-offline": "^3.25.6",
+    "serverless": "^1.35.1",
+    "serverless-offline": "^3.31.3",
     "serverless-offline-scheduler": "^0.3.5",
     "serverless-offline-sqs": "^1.6.0",
+    "serverless-plugin-typescript": "^1.1.5",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
-    "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   }
