--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -4,6 +4,7 @@ app: wdip-be
 tenant: hejare
 
 plugins:
+  - serverless-plugin-typescript
   - serverless-offline-sqs
   - serverless-offline-scheduler
   - serverless-offline
@@ -23,24 +24,29 @@ iamRoleStatements:
       - es:ESHttpPut
       - es:ESHttpDelete
       - es:ESHttpGet
+      - sqs:ReceiveMessage
+      - sqs:DeleteMessage
+      - sqs:GetQueueAttributes
+      - sqs:SendMessage
     Resource:
       - arn:aws:es:${self:provider.region}:843375259671:*
+      - arn:aws:sqs:${self:provider.region}:843375259671:wdip-import-${opt:stage, "local"}
 
 functions:
   getPendingMotions:
-    handler: apiHandler.getPendingMotions
+    handler: src/apiHandler.getPendingMotions
     events:
       - http:
           path: motions/pending
           method: get
   getMotionsByParty:
-    handler: apiHandler.getMotionsByParty
+    handler: src/apiHandler.getMotionsByParty
     events:
       - http:
           path: motions/byparty
           method: get
   getMotion:
-    handler: apiHandler.getMotionById
+    handler: src/apiHandler.getMotionById
     events:
       - http:
           path: motions/{id}
@@ -50,19 +56,19 @@ functions:
               paths:
                 id: true
   getWordCloud:
-    handler: apiHandler.getWordCloud
+    handler: src/apiHandler.getWordCloud
     events:
       - http:
           path: charts/wordcloud
           method: get
   getAllParties:
-    handler: apiHandler.getAllParties
+    handler: src/apiHandler.getAllParties
     events:
       - http:
           path: partydata/allparties
           method: get
   adminStartImport:
-    handler: importHandler.adminStartImport
+    handler: src/importHandler.adminStartImport
     events:
       - http:
           path: admin/import
@@ -74,7 +80,7 @@ functions:
                 fromDate: false
                 toDate: false
   adminStartUpdateImport:
-    handler: importHandler.startUpdateImport
+    handler: src/importHandler.startUpdateImport
     events:
       - schedule:
           rate: rate(1 day)
@@ -95,13 +101,13 @@ functions:
                 fromDate: false
                 documentType: false
   adminHandleImportQueueEvent:
-    handler: importHandler.handleImportQueueEvent
+    handler: src/importHandler.handleImportQueueEvent
     events:
       - sqs:
           arn: arn:aws:sqs:eu-west-1:843375259671:wdip-import-${opt:stage, "local"}
           batchSize: 1
   adminLogQueueStatus:
-    handler: importHandler.logQueueStatus
+    handler: src/importHandler.logQueueStatus
     events:
       - schedule:
           rate: rate(1 minute)
@@ -114,5 +120,3 @@ custom:
     accessKeyId: root
     secretAccessKey: root
     skipCacheInvalidation: false
-  serverless-offline:
-    location: ./dist
