--- a/wdip-be/tsconfig.json
+++ b/wdip-be/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2016",
         "allowJs": true,
-        "outDir": "./dist",
+	"outDir": "./.build",
         "module": "commonjs",
         "sourceMap": true,
         "esModuleInterop": true
