--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -9,10 +9,11 @@
     "url": "https://github.com/hejare/aws-motioner-data.git"
   },
   "scripts": {
+    "clean": "rm -rf .build",
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
-    "debug": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --host 0.0.0.0 --port 3001 --stage local",
+    "debug": "npm run clean && npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --host 0.0.0.0 --port 3001 --stage local",
     "test": "jest",
     "test:watch": "jest --watch"
   },
