--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -31,6 +31,7 @@
     "cryptiles": "^4.1.2",
     "elasticsearch": "^15.1.1",
     "fast-safe-stringify": "^2.0.6",
+    "http-aws-es": "^6.0.0",
     "load-json-file": "^5.1.0",
     "moment": "^2.22.2",
     "object-sizeof": "^1.2.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/query-string": "^6.1.1",
+    "@types/http-aws-es": "^1.1.3",
     "husky": "^1.2.1",
     "jest": "^23.6.0",
     "jest-extended": "^0.11.0",
