--- a/wdip-be/environment_test.yml
+++ b/wdip-be/environment_test.yml
@@ -1,3 +1,4 @@
+AWS_REGION: ${self:provider.region}
 ES_SERVER: "https://search-wdip-test-ytqqffn4oexhp3db2uwevgqocy.eu-west-1.es.amazonaws.com"
 WDIP_MOTION_INDEX: "motions"
 STATUS_INDEX_SQS: "status-sqs"
