--- a/wdip-be/package.json
+++ b/wdip-be/package.json
@@ -13,7 +13,7 @@
     "build-ts": "./node_modules/.bin/tsc",
     "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run tslint && node --inspect=0.0.0.0:9229 ./node_modules/.bin/serverless offline start --host 0.0.0.0 --port 3001 --stage local",
-    "test": "jest",
+    "test": "npm run tslint && jest",
     "test:watch": "jest --watch"
   },
   "husky": {
