--- a/wdip-be/environment_local.yml
+++ b/wdip-be/environment_local.yml
@@ -1,6 +1,7 @@
 AWS_REGION: ${self:provider.region}
 ES_SERVER: "elasticsearch:9200"
-WDIP_MOTION_INDEX: "motions"
-STATUS_INDEX_SQS: "status-sqs"
-STATUS_INDEX_IPS: "status-ips"
 SQS_URL: "http://sqs:9324/queue/wdip-import-local"
+STATUS_INDEX_IPS: "status-ips"
+STATUS_INDEX_SQS: "status-sqs"
+WDIP_IS_LOCAL_ENV: true
+WDIP_MOTION_INDEX: "motions"
