--- a/wdip-be/environment_test.yml
+++ b/wdip-be/environment_test.yml
@@ -1,3 +1,4 @@
+AWS_APPLICATION_NAME: ${self:app}-test
 AWS_REGION: ${self:provider.region}
 ES_SERVER: "https://search-wdip-test-ytqqffn4oexhp3db2uwevgqocy.eu-west-1.es.amazonaws.com"
 SQS_URL: "https://sqs.eu-west-1.amazonaws.com/843375259671/wdip-import-test"
