sets timeout on import functions to 15 min (max allowed)

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -82,6 +82,7 @@ functions:
                 toDate: false
   adminStartImport:
     handler: src/importHandler.adminStartImport
+    timeout: 900 # max 15 min timeout on AWS
   routeAdminStartUpdateImport:
     handler: src/importHandler.routeAdminStartUpdateImport
     events:
@@ -95,6 +96,7 @@ functions:
                 documentType: false
   adminStartUpdateImport:
     handler: src/importHandler.startUpdateImport
+    timeout: 900 # max 15 min timeout on AWS
     events:
       - schedule:
           rate: rate(1 day)
