--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -42,7 +42,9 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-foundation": "^0.9.3",
+    "@types/redux-logger": "^3.0.6",
     "jest": "^23.6.0",
+    "redux-logger": "^3.0.6",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
   },
