--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-foundation": "^0.9.3",
     "jest": "^23.6.0",
+    "serverless-finch": "^2.3.2",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
   },
