--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "@types/rc-slider": "^8.6.0",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
