--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^4.0.8",
     "recharts": "^1.3.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
