--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -24,6 +24,7 @@
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.6.0",
     "react-foundation": "^0.9.6",
+    "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^4.0.8",
@@ -42,7 +43,7 @@
     "@types/chart.js": "^2.7.40",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.0",
-    "@types/react": "^16.4.18",
+    "@types/react": "^16.8.2",
     "@types/react-dom": "^16.0.9",
     "@types/react-foundation": "^0.9.3",
     "@types/redux-logger": "^3.0.6",
