--- a/wdip-be/functions/aggregate_functions.yml
+++ b/wdip-be/functions/aggregate_functions.yml
@@ -4,4 +4,4 @@ aggregateStakeholders:
   events:
     - schedule:
         rate: cron(0 2 * * ? *)
-        enabled: ${self:provider.enableScheduled}
+        enabled: ${self:provider.enableScheduledAggregations}
