enables scheduled stakeholder aggregator (plus minor refactoring)

--- a/wdip-be/functions/aggregate_functions.yml
+++ b/wdip-be/functions/aggregate_functions.yml
@@ -5,3 +5,5 @@ aggregateStakeholders:
     - schedule:
         rate: cron(0 2 * * ? *)
         enabled: ${self:provider.enableScheduledAggregations}
+        input:
+          continueScroll: true
