Disable scheduled jobs until DB layer has been refactored

--- a/wdip-be/serverless.yml
+++ b/wdip-be/serverless.yml
@@ -15,8 +15,8 @@ provider:
   profile: wdip-test
   region: eu-west-1
   environment: ${file(./environment_${opt:stage, "local"}.yml)}
-  enableScheduledImports: true
-  enableScheduledAggregations: true
+  enableScheduledImports: false
+  enableScheduledAggregations: false
   iamRoleStatements:
     - Effect: Allow
       Action:
